--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "build",
     "ckeditor5-metadata.json"
   ],
+  "dependencies": {
+    "mime": "3.0.0"
+  },
   "devDependencies": {
     "@ckeditor/ckeditor5-autoformat": ">=40.0.0",
     "@ckeditor/ckeditor5-basic-styles": ">=40.0.0",
@@ -47,20 +50,21 @@
     "@ckeditor/ckeditor5-table": ">=40.0.0",
     "@ckeditor/ckeditor5-theme-lark": ">=40.0.0",
     "@ckeditor/ckeditor5-upload": ">=40.0.0",
-    "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.1",
-    "@typescript-eslint/eslint-plugin": "~5.43.0",
+    "@types/chai": "4.3.1",
+    "@types/mime": "3.0.2",
+    "@types/mocha": "9.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.18.0",
     "ckeditor5": ">=40.0.0",
-    "eslint": "^7.32.0",
+    "eslint": "7.32.0",
     "eslint-config-ckeditor5": ">=5.1.1",
-    "http-server": "^14.1.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.6",
-    "stylelint": "^13.13.1",
+    "http-server": "14.1.0",
+    "husky": "4.2.5",
+    "lint-staged": "10.2.6",
+    "stylelint": "13.13.1",
     "stylelint-config-ckeditor5": ">=5.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "ts-node": "10.9.1",
+    "typescript": "4.7.4"
   },
   "peerDependencies": {
     "ckeditor5": ">=40.0.0"
