--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ckeditor5-file-uploader",
     "ckeditor5 file upload"
   ],
-  "main": "src/index.ts",
+  "main": "src/index.js",
   "license": "GPLV2",
   "engines": {
     "node": ">=16.0.0",
@@ -31,31 +31,31 @@
     "mime": "3.0.0"
   },
   "devDependencies": {
-    "@ckeditor/ckeditor5-autoformat": "^41.3.1",
-    "@ckeditor/ckeditor5-basic-styles": "^41.3.1",
-    "@ckeditor/ckeditor5-block-quote": "^41.3.1",
-    "@ckeditor/ckeditor5-code-block": "^41.3.1",
-    "@ckeditor/ckeditor5-core": "^41.3.1",
-    "@ckeditor/ckeditor5-editor-classic": "^41.3.1",
-    "@ckeditor/ckeditor5-essentials": "^41.3.1",
-    "@ckeditor/ckeditor5-heading": "^41.3.1",
-    "@ckeditor/ckeditor5-image": "^41.3.1",
-    "@ckeditor/ckeditor5-indent": "^41.3.1",
+    "@ckeditor/ckeditor5-autoformat": ">=41.3.1",
+    "@ckeditor/ckeditor5-basic-styles": ">=41.3.1",
+    "@ckeditor/ckeditor5-block-quote": ">=41.3.1",
+    "@ckeditor/ckeditor5-code-block": ">=41.3.1",
+    "@ckeditor/ckeditor5-core": ">=41.3.1",
+    "@ckeditor/ckeditor5-editor-classic": ">=41.3.1",
+    "@ckeditor/ckeditor5-essentials": ">=41.3.1",
+    "@ckeditor/ckeditor5-heading": ">=41.3.1",
+    "@ckeditor/ckeditor5-image": ">=41.3.1",
+    "@ckeditor/ckeditor5-indent": ">=41.3.1",
     "@ckeditor/ckeditor5-inspector": ">=4.1.0",
-    "@ckeditor/ckeditor5-link": "^41.3.1",
-    "@ckeditor/ckeditor5-list": "^41.3.1",
-    "@ckeditor/ckeditor5-media-embed": "^41.3.1",
+    "@ckeditor/ckeditor5-link": ">=41.3.1",
+    "@ckeditor/ckeditor5-list": ">=41.3.1",
+    "@ckeditor/ckeditor5-media-embed": ">=41.3.1",
     "@ckeditor/ckeditor5-package-tools": "^1.1.0",
-    "@ckeditor/ckeditor5-paragraph": "^41.3.1",
-    "@ckeditor/ckeditor5-table": "^41.3.1",
-    "@ckeditor/ckeditor5-theme-lark": "^41.3.1",
-    "@ckeditor/ckeditor5-upload": "^41.3.1",
+    "@ckeditor/ckeditor5-paragraph": ">=41.3.1",
+    "@ckeditor/ckeditor5-table": ">=41.3.1",
+    "@ckeditor/ckeditor5-theme-lark": ">=41.3.1",
+    "@ckeditor/ckeditor5-upload": ">=41.3.1",
     "@types/chai": "4.3.1",
     "@types/mime": "3.0.2",
     "@types/mocha": "9.1.1",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.18.0",
-    "ckeditor5": "^41.3.1",
+    "ckeditor5": ">=41.3.1",
     "eslint": "7.32.0",
     "eslint-config-ckeditor5": ">=5.1.1",
     "http-server": "14.1.0",
@@ -67,7 +67,7 @@
     "typescript": "4.7.4"
   },
   "peerDependencies": {
-    "ckeditor5": "^41.3.1"
+    "ckeditor5": ">=41.3.1"
   },
   "scripts": {
     "ts:build": "tsc -p ./tsconfig.release.json",
